snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.module.sha256
130f07be180062d77d5e3e314381e666044ba144d8099d4efebe36a2099c6aba